# shared_memory

./: .gitignore  .travis.yml  Cargo.toml  README.md  changelog.md  shared_mem.link
.github/workflows/: rust.yml
ci/: script.sh
examples/: basic.rs  create.rs  create_advanced.rs  create_raw.rs  custom.rs  custom_create.rs  custom_open.rs  event.rs  events_create.rs  events_open.rs  mutex.rs  open.rs  open_raw.rs  raw.rs  raw_create.rs  raw_open.rs  simple_create.rs  simple_open.rs
shared_memory_derive/: CONTRIBUTING.md  Cargo.toml  README.md
shared_memory_derive/src/: lib.rs
shared_memory_derive/tests/: compile_tests.rs
shared_memory_derive/tests/run-pass/: arrays.rs  brace_structs.rs  enums.rs  generic.rs  tuple_structs.rs
shared_memory_derive/tests/ui/: generic.rs  generic.stderr  refs.rs  refs.stderr  str.rs  str.stderr  vec.rs  vec.stderr  zero_sized_types.rs  zero_sized_types.stderr
src/: cast.rs  conf.rs  error.rs  event_defs.rs  events.rs  handle.rs  lib.rs  linux.rs  lock_defs.rs  locking.rs  locks.rs  macos.rs  nix.rs  raw.rs  unix.rs  win.rs  windows.rs
src/nix/: linux.rs  mac.rs  mod.rs
src/windows/: mod.rs
tests/: general.rs  posix_semantics.rs
