[package]
name = "shared_memory"
description = "A user friendly crate that allows you to share memory between processes"
version = "0.12.2"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

#Extra fields for crates.io
readme = "README.md"
documentation = "https://docs.rs/shared_memory"
repository = "https://github.com/elast0ny/shared_memory-rs"
keywords = ["shmem", "shared", "memory", "inter-process", "process"]
categories = [
    "os::unix-apis",
    "os::windows-apis",
    "memory-management",
    "concurrency",
    "asynchronous",
]

exclude = ["ci/*", ".github/*"]

[features]

[dependencies]
cfg-if = "1.0"
rand = "0.8"
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win-sys = "0"

[dev-dependencies]
raw_sync = "0.1"
clap = "2.33"
env_logger = "0"
